# procurement-automation

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
accounts/: admin.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templates/emails/: welcome_email.html  welcome_email.txt
backend/: admin.py  choices.py  filters.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/migrations/: 0001_initial.py
backend/templates/emails/: order_confirmed_shop.html  order_confirmed_shop.txt  order_confirmed_user.html  order_confirmed_user.txt
procurement_automation/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
