[project]
name = "procurement-automation"
version = "0.1.0"
description = "Django REST API for procurement automation"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.5",
    "djangorestframework>=3.17.1",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "black>=26.5.0",
    "djangorestframework-stubs>=3.17.0",
]
